# ExperimentFramework

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
include/: ExperimentMessage.h  IReceiver.h  ITransmitter.h  IndermediateNode.h  IntermediateNode.h  InternalNodeConfigurator.h  SupportedProtocols.h
include/configurator/: IIntermediateNodeConfigurator.h  IPRimaryNodeConfigurator.h  IntermediateNodeConfiguratorUdp.h  PrimaryNodeConfiguratorUdp.h
include/ip/: IpAddress.h
include/logger/: ConsoleLogger.h  IDataLogger.h  ILogger.h
include/nodes/: IntermediateNode.h  PrimaryNode.h  PrimaryNodes.h
include/queue/: ThreadSafeQueue.h
include/receiver/: IReceiver.h  InterThreadReceiver.h  SocketReceiver.h  UdpReceiver.h
include/stopwatch/: IStopwatch.h
include/time/: ChronoTimeSerice.h  ITimeService.h
include/transmitter/: ITransmitter.h  InterThreadTransmitter.h  SocketTransmitter.h  UdpTransmitter.h
source/: IndermediateNode.cpp  IntermediateNode.cpp  InternalNodeConfigurator.cpp  main.cpp  receiver.cpp  receiverMain.cpp  transmitter.cpp  transmitterMain.cpp
source/configurator/: IntermediateNodeConfiguratorUdp.cpp  PrimaryNodeConfiguratorUdp.cpp
source/ip/: IpAddress.cpp
source/logger/: ConsoleLogger.cpp
source/nodes/: IntermediateNode.cpp  PrimaryNode.cpp  PrimaryNodes.cpp
source/queue/: ThreadSafeQueue.cpp
source/receiver/: InterThreadReceiver.cpp  SocketReceiver.cpp  UdpReceiver.cpp
source/transmitter/: InterThreadTransmitter.cpp  SocketTransmitter.cpp  UdpTransmitter.cpp
tests/: InterThreadTransmitterTest.cpp  IntermediateNodeTests.cpp  PrimaryNodeTests.cpp  ThreadsafeQueueTests.cpp
